syntax = "proto3";

option java_multiple_files = true;
option java_package = "example.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// service definition
service Greeter {

    // service method
    rpc sayHello (HelloRequest) returns (HelloReply) {}

    rpc sayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// request & response message definition
message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
